<resources>
    <string name="app_name">Копилка 2.0</string>
    <string name="period">Период</string>
    <string name="plans">Планы</string>
    <string name="history">История</string>
    <string name="wallets">Кошельки</string>
    <string name="banks">Копилки</string>
    <string name="my_wallets">Мои кошельки</string>
    <string name="headerWalletsActive">Всего в активных  кошельках:</string>
    <string name="headerWalletsInactive">Всего в неактивных кошельках:</string>
    <string name="headerSavers">Всего в копилках:</string>
    <string name="num_stub">0</string>
    <string name="sum_stub">0.00</string>
    <string name="stub">(нет)</string>
    <string name="card">Карты</string>
    <string name="aim">Цель</string>
    <string name="saverAimHint">Цель и желаемая дата её достижения</string>
    <string name="showInvisible">Показать скрытые</string>
    <string name="hideInvisible">Убрать скрытые</string>
    <string name="wallet">Кошелек</string>
    <string name="my_banks">Мои копилки</string>
    <string name="periodFragmentTitle">Настройка периода</string>
    <string name="add_new_wallet">Новый кошелёк</string>
    <string name="add_new_wallet_button">Создать</string>
    <string name="save">Сохранить</string>
    <string name="add_new_bank">Новая копилка</string>
    <string name="walletName">Название кошелька…</string>
    <string name="saverName">Название копилки…</string>
    <string name="startMoney">Начальная сумма</string>
    <string name="planned_spend">Планировалось потратить:</string>
    <string name="planned_income">Планировалось получить:</string>
    <string name="active">Активный</string>
    <string name="activeWallest">Активныe</string>
    <string name="inactive">Неактивный</string>
    <string name="inactiveWallets">Неактивныe</string>
    <string name="walletType">Тип кошелька</string>
    <string name="hintActiveWallet">Активные кошельки будут учитываться при расчете доступных средств. Тип кошелька в дальнейшем при необходимости может быть изменен.</string>
    <string name="hintInactiveWallet">Неактивные кошельки не будут учитываться при расчете доступных средств. Тип кошелька в дальнейшем при необходимости может быть изменен.</string>
    <string name="hintChangeTypeWallet">Тип кошелька в дальнейшем при необходимости может быть изменен.</string>
    <string name="add">Добавить</string>
    <string name="spend">Расход</string>
    <string name="income">Поступление</string>
    <string name="periodDaysLeft">До конца периода:</string>
    <string name="days1">день</string>
    <string name="days2">дня</string>
    <string name="days3">дней</string>
    <string name="daysRP1">дня</string>
    <string name="daysRP2">дней</string>
    <string name="current_balance">Текущий баланс</string>
    <string name="creation_date">Дата создания</string>
    <string name="start_money">Начальная сумма</string>
    <string name="wallet_visibility">Видимость</string>
    <string name="period2">Период:</string>
    <string name="hint_empty_wallet_title">Нет кошельков</string>
    <string name="hint_empty_wallet_description">Наличные, карты, счета и вклады в банках и т.п.: Пересчитайте все свои деньги и добавьте в приложение соответствующие кошельки, чтобы производить по ним операции и отслеживать баланс.</string>
    <string name="default_text">-</string>
    <string name="hint_bank_virtual_title">Копилки виртуальны</string>
    <string name="hint_bank_virtual_description">Они позволяют учитывать накопления, не отделяя накопленные средства от кошельков в реальности.</string>
    <string name="hint_bank_income_title">Наполняйте копилки</string>
    <string name="hint_bank_income_description">Отложенные в копилки деньги будут выведены из расчетов, но останутся при этом в ваших кошельках.</string>
    <string name="hint_bank_expenses_title">Извлекайте из копилок</string>
    <string name="hint_bank_expenses_description">Если значение “Накоплено” ушло в минус, вы можете исправить ситуацию, извлекая деньги из копилок.</string>
    <string name="saverToolbarTitle">Копилка</string>
    <string name="delete">Удалить</string>
    <string name="rvOperationPlanExpensesHint">Планировалось потратить:</string>
    <string name="rvOperationPlanIncomeHint">Планировалось получить:</string>
    <string name="rvOperationSaverExpenses">Снятие с копилки</string>
    <string name="rvOperationSaverIncome">Пополнение копилки</string>
    <string name="rvOperationTransfer">Перемещение</string>
    <string name="plansForPeriod">Планы на период</string>
    <string name="period_income">Планируется поступлений</string>
    <string name="period_expenses">Планируется расходов</string>
    <string name="periodHint1">Вы можете тратить по</string>
    <string name="periodHint2">в течение</string>
    <string name="not_found_plans_done">Нет выполненных планов</string>
    <string name="not_found_plans_current">Нет текущих планов</string>
    <string name="not_found_plans_outside">Нет планов вне текущего периода</string>
    <string name="description_not_found_plans_current">Здесь будут отображаться невыполненные планы текущего спланированного периода. Все они будут учтены при расчете среднесуточного расхода.</string>
    <string name="description_not_found_plans_done">Здесь будут отображаться выполненные планы. Планы прошедших периодов можно «сбросить», чтобы перенести их в текущий спланированный период.</string>
    <string name="description_not_found_plans_outside">Сюда попадают планы с планируемой датой вне спланированного периода. Эти планы не учитываются в расчетах среднесуточного расхода, но вы можете добавлять их в приложение, чтобы не забывать о них в будущем.</string>
    <string name="current">Текущие</string>
    <string name="completed">Выполненные</string>
    <string name="outside">Вне периода</string>
    <string name="planned_sum">Планируемая сумма</string>
    <string name="fromTitle">из</string>
    <string name="toTitle">в</string>
    <string name="economyTitle">Сэкономлено</string>
    <string name="savingsTitle">Накоплено</string>
    <string name="errorPeriodDays">Продолжительность периода должна быть не менее одного дня.</string>
    <string name="fragmentAboutToolbarSubtitle">О приложении</string>
    <string name="create_plan">Создать план</string>
    <string name="description_2">Описание…</string>
    <string name="plan_date">Планируемая дата выполнения</string>
    <string name="hintFabExpenses">Расход</string>
    <string name="hintFabIncome">Поступление</string>
    <string name="hintFabTransfer">Перевод между кошельками</string>
    <string name="hintFabSaverExpenses">Достать накопленное из копилки</string>
    <string name="hintFabSaverIncome">Убрать накопленное в копилку</string>
    <string name="plan_period">- планируемый период</string>
    <string name="create">Создать</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="digit_0">0</string>
    <string name="key_comma">,</string>
    <string name="buttonProceed">Продолжить</string>
    <string name="deleteWallet">Удалить кошелёк?</string>
    <string name="deleteSaverDescription">Все связанные с этой копилкой операции также будут удалены.</string>
    <string name="confirmDeleteDescription">Все связанные с этим кошельком операции и шаблоны также будут удалены. Операции перемещения, в которых учавствовал этот кошелёк, будут заменены соответствующими операциями расходов или поступлений.</string>
    <string name="confirmDeleteWarning">Внимание: перед удалением кошелька рекомендуется создать бэкап базы данных.</string>
    <string name="saved">Сэкономлено</string>
    <string name="saved_2">Сохранено</string>
    <string name="plannedIncomeHint">Планируется получить</string>
    <string name="planed_income">Планировалось получить:</string>
    <string name="plannedExpensesHint">Планируется потратить</string>
    <string name="completed_outside_period">Выполненные вне периода</string>
    <string name="operationNameTitle">Описание</string>
    <string name="operationFromTitle">Откуда</string>
    <string name="newOperationSumHint">Введите сумму</string>
    <string name="buttonCreate">Создать</string>
    <string name="plan">План</string>
    <string name="plan_spend">Планируется потратить</string>
    <string name="plan_income">Планироуется получить</string>
    <string name="fact_spent">Фактически потрачено</string>
    <string name="fact_income">Фактически получено</string>
    <string name="plan_completed_outside_period">План выполнен вне текущего периода</string>
    <string name="plan_completed_in_period">План выполнен в текущем периоде</string>
    <string name="reset">Сбросить</string>
    <string name="reseted">Сброшено</string>
    <string name="find_in_history">Найти в истории</string>
    <string name="_0_00">0.00</string>
    <string name="operationToTitle">Куда</string>
    <string name="hintOperationDescription">Введите описание</string>
    <string name="hintFabSaverExpensesCut">Достать из копилки</string>
    <string name="hintFabSaverIncomeCut">Убрать в копилку</string>
    <string name="menuItemTitleDatabase">База данных</string>
    <string name="menuItemTitleAbout">О приложении</string>
    <string name="navViewHeaderTitle"><a href="https://fact.digital/">Центр интернет-технологий «Факт»</a></string>
    <string name="navViewHeaderSubtitle">Разрабатываем и сопровождаем технологичные веб-системы и мобильные приложения</string>
    <string name="databaseImportLegacyDbTitle">Перенос базы из старого приложения</string>
    <string name="databaseImportLegacyDbHint">Укажите путь к базе данных из старой версии приложения, чтобы выполнить её перенос.</string>
    <string name="databaseImportLegacyDbWarning">Внимание: существующая в приложении база данных будет перезаписана без возможности восстановления.</string>
    <string name="databaseToolbarTitle">База данных</string>
    <string name="buttonImportLegacy">Импортировать базу\n старой версии приложения</string>
    <string name="snackbarNoFileManager">На вашем устройстве не найден файловый менеджер.</string>
    <string name="added">Добавлено</string>
    <string name="deleted">Удалено</string>
    <string name="historyEmptyViewTitle">Нет операций</string>
    <string name="historyEmptyViewHint">Записывайте все произведённые за день операции и откладывайте сэкономленные деньги в копилки.</string>
    <string name="bankEmptyTitle">Нет копилок</string>
    <string name="bankEmptyDescription">Создавайте копилки и откладывайте деньги на любые цели. Отложенные в копилки деньги не учитываюся при расчете доступных средств</string>
    <string name="menuItemHistoryToday">Сегодня</string>
    <string name="errorEnterOperationSum">Введите сумму операции.</string>
    <string name="errorSameWalletForTransfer">Совпадают поля «Откуда» и «Куда».</string>
    <string name="dialogDeleteOperationTitle">Удалить операцию?</string>
    <string name="dialogDeleteOperationMessage">Операция будет удалена, а если она плановая, то выполнение связанного с ней плана будет отменено.</string>
    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
    <string name="dialogCurrentPlansTitle">Планы текущего периода</string>
    <string name="you_delete_plan_from_list">Вы удалите выбранный план из списка</string>
    <string name="buttonCancel">Отмена</string>
    <string name="buttonOk">Ок</string>
</resources>