<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen"
    android:orientation="vertical"
    tools:context=".presentation.fragments.wallets.WalletFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/toolbarMargin"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|snap|enterAlways"
        app:menu="@menu/menu_wallet_options"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/wallet" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/saveChanges"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/maxInputTextCount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/walletName"
                    style="@style/EditTextMainStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widgetsHeight"
                    android:layout_marginTop="16dp"
                    android:hint="@string/walletName"
                    android:inputType="textCapSentences"
                    android:maxLength="@integer/maxInputTextCount" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/current_balance"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/sum_stub"
                android:textColor="@color/gray"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/start_money"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/startSum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/sum_stub"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/creation_date"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/createDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="5dp"
                android:text="@string/walletType"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/active"
                    style="@style/RadioButtonWithoutIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/active" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/inactive"
                    style="@style/RadioButtonWithoutIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inactive" />

            </RadioGroup>

            <TextView
                android:id="@+id/hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/hintActiveWallet"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/wallet_visibility"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/visibility"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:button="@drawable/selector_switch_thumb"
                    android:buttonTint="@color/gray"
                    android:checked="true"
                    android:textColor="@color/gray" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/saveChanges"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll" />

</androidx.constraintlayout.widget.ConstraintLayout>