<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:text="@string/stub"
            android:textAppearance="@style/DialogTitleTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialogContentPadding"
            android:layout_marginStart="@dimen/dialogContentPadding"
            android:layout_marginEnd="@dimen/dialogContentPadding"/>

        <TextView
            android:id="@+id/message"
            android:text="@string/stub"
            android:textAppearance="@style/DialogMessageTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:layout_marginStart="@dimen/dialogContentPadding"
            android:layout_marginEnd="@dimen/dialogContentPadding"/>

        <LinearLayout
            android:id="@+id/buttonsContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginTop="@dimen/largeMargin">

            <Button
                android:id="@+id/buttonPositive"
                style="@style/Button"
                android:text="@string/buttonOk"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/buttonNegative"
                style="@style/Button"
                android:backgroundTint="@color/dialogCancelButton"
                android:text="@string/buttonCancel"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>